# Forecasting-sell-prices-LSTM

./: .gitignore  .pre-commit-config.yaml  README.md  predictions.csv  pyproject.toml
.dvc/: config  import requests.py
checkpoints/: .gitignore  best_model.ckpt.dvc
configs/: data.yaml  infer.yaml  model.yaml  train.yaml
forecastin_m5/: dataloader.py  model.py  train.py
forecasting_m5/: dataloader.py  dvc_utils.py  infer.py  model.py  train.py
model/: checkpoints.dvc
scripts/: totensorrt.sh
src/: dataloader.py  dvc_utils.py  infer.py  model.py  train.py
src/conf/: config.yaml  data.yaml  infer.yaml  model.yaml  train.yaml
src/data/: raw.dvc
src/lstm_mlops_project/: config.py  dataloader.py  infer.py  model.py  train.py
