[project]
name = "lstm-mlops-project"
version = "0.1.0"
description = ""
authors = [
    {name = "kvasilisav",email = "kislitsynavv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)"
]

[tool.poetry]
packages = [{include = "lstm_mlops_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
fire = "^0.7.0"
dvc = "^3.59.2"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
